--- a/00-assignment01/index.html
+++ b/00-assignment01/index.html
@@ -29,7 +29,7 @@
 
 <h4> Compositions </h4>
 
-Some of the most famous Mokranjac's compositions are:
+<p> Some of the most famous Mokranjac's compositions are: </p>
 <ul>
 <li> Statija treća </li>
 <li> Tebe pojem </li>
